Replace ECMAScript with Python documentation

--- a/docs/specs/source_python_math.tex
+++ b/docs/specs/source_python_math.tex
@@ -5,9 +5,9 @@ The following names are provided by the MATH library:
 \begin{itemize}
 \item \href{https://sourceacademy.org/sicpjs/1.1.4\#p8}{\lstinline{math_}$\textit{name}$},
 where $\textit{name}$ is any name specified in the
-JavaScript
+Python
 \texttt{Math} library, see\\
-\href{https://www.ecma-international.org/ecma-262/9.0/index.html\#sec-math-object}{\color{DarkBlue}ECMAScript Specification, Section 20.2}. Examples:
+\href{https://docs.python.org/3.7/library/math.html}{\color{DarkBlue}Python 3.7.17 Documentation}. Examples:
 \begin{itemize}
 \item \verb#math_nan#: \textit{primitive}, refers to the NaN (``Not a Number'') value,
 \item \verb#math_inf#: \textit{primitive}, refers to the Infinity value,
