--- a/docs/specs/source_1.tex
+++ b/docs/specs/source_1.tex
@@ -29,13 +29,10 @@
 
 \input source_typing
 
-\section{Standard Libraries}
+\input source_standard
 
-The following libraries are always available in this language.
-
-\input source_misc
-
-\input source_math
+The standard library for Source \S\ 1 is documented in
+\href{}{online documentation of Source \S\ 1}.
 
 \input source_js_differences
 
